agregue cards en todas las pag de proyectos

--- a/galeria.html
+++ b/galeria.html
@@ -36,6 +36,32 @@
         <img src="https://iili.io/MNxm6x.png" alt="">
         <img src="https://iili.io/MNxy3Q.png" alt="">
     </div>
+    <div class="masProyectos">
+        <h3>Más proyectos como este</h3>
+        <div class="contenedorCards">
+            <div class="cards card1">
+                <img src="https://iili.io/MUddqx.jpg" alt="...">
+                <div>
+                    <h5 class="g-tituloCards">Patio Zen</h5>
+                    <p>Lograr un ambiente fluido y dinámico donde intervienen diferentes actores, generando espacios vividos.</p>
+                </div>
+            </div>
+            <div class="cards card2">
+                <img src="https://iili.io/MUdjp9.jpg" alt="...">
+                <div>
+                    <h5 class="g-tituloCards">Patio Mexicano</h5>
+                    <p>Colocación de elementos arquitectónicos que hacen un espacio en conjugación con la vegetación.</p>
+                </div>
+            </div>
+            <div class="cards card3">
+                <img src="https://iili.io/MUd20Q.jpg" alt="...">
+                <div>
+                    <h5 class="g-tituloCards">Fachada</h5>
+                    <p>La sencillez, naturalidad y armonía dan como resultado un diseño de buen gusto.</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="g-coordinemos-container">
         <h2 class="g-tituloSeccion">Coordinemos una cita</h2>
         <p>Comunicate por WhatsApp</p>
