--- a/patiozen.html
+++ b/patiozen.html
@@ -38,6 +38,32 @@
         <img src="https://iili.io/MwRtz7.png" alt="">
         <img src="https://iili.io/MwRLe2.png" alt="">
     </div>
+    <div class="masProyectos">
+        <h3>Más proyectos como este</h3>
+        <div class="contenedorCards">
+            <div class="cards card1">
+                <img src="https://iili.io/MU3oKv.jpg" alt="...">
+                <div>
+                    <h5 class="g-tituloCards">Piscina Natural</h5>
+                    <p>Hacer de tu patio un oasis de relajación y disfrute.</p>
+                </div>
+            </div>
+            <div class="cards card2">
+                <img src="https://iili.io/MU3xlR.webp" alt="...">
+                <div>
+                    <h5 class="g-tituloCards">Cubiertas verdes</h5>
+                    <p>Las posibilidades de aumentar las áreas verdes, más allá de los patios, parques y jardines, son múltiples.</p>
+                </div>
+            </div>
+            <div class="cards card3">
+                <img src="https://iili.io/MU3CiJ.jpg" alt="...">
+                <div>
+                    <h5 class="g-tituloCards">Galería</h5>
+                    <p>Dar solución para lograr la mayor integración con el medio, es nuestro objetivo.</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="g-coordinemos-container">
         <h2 class="g-tituloSeccion">Coordinemos una cita</h2>
         <p>Comunicate por WhatsApp</p>
