agregue link a instagram y corregi margenes de cards proyectos indiv

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <li><a href="servicios.html">SERVICIOS</a></li>
             </ul>       
             <div class="botones">   
-                <a href="#">
+                <a href="https://instagram.com/origenesarquitecturaok?igshid=YmMyMTA2M2Y=" target="_blank" rel="noopener noreferrer nofollow">
                     <img src="https://iili.io/GEGe8G.png" alt="icono instagram">
                 </a>
-                <a href="#">
+                <a href="#" target="_blank" rel="noopener noreferrer nofollow">
                   <img src="https://iili.io/GEGOas.png" alt="icono facebook">
                 </a>
             </div>
