Añadir navbar a proyectos individuales

--- a/cubiertasverdes.html
+++ b/cubiertasverdes.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="css/proyectos.css">
 </head>
 <body class="proyecto" id="cubiertas-verdes">
+    <nav>
+        <div class="cajaNav"> 
+            <div class="titNav">
+                <a class="logo" href="index.html">
+                    <img src="https://iili.io/1hgAUG.png" alt="logo">
+                </a>         
+            </div>      
+            <a class="toggle" onclick="alternar('menu')">
+                <img src="https://iili.io/1ymMmX.png" alt="">
+            </a>
+            <ul class="barNav navA"> 
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="nosotros.html">NOSOTROS</a></li>
+                <li><a href="proyectos.html">PROYECTOS</a></li>
+                <li><a href="servicios.html">SERVICIOS</a></li>
+            </ul>       
+            <div class="botones">   
+                <a href="https://instagram.com/origenesarquitecturaok?igshid=YmMyMTA2M2Y=" target="_blank" rel="noopener noreferrer nofollow">
+                    <img src="https://iili.io/GEGe8G.png" alt="icono instagram">
+                </a>
+                <a href="#" target="_blank" rel="noopener noreferrer nofollow">
+                  <img src="https://iili.io/GEGOas.png" alt="icono facebook">
+                </a>
+            </div>
+        </div>
+        <ul class="barNav navB cerrado" id="menu"> 
+            <li><a href="index.html">INICIO</a></li>
+            <li><a href="nosotros.html">NOSOTROS</a></li>
+            <li><a href="proyectos.html">PROYECTOS</a></li>
+            <li><a href="servicios.html">SERVICIOS</a></li>
+        </ul>  
+    </nav>
     <div class="g-hero-img-container">
         <img class="g-hero-img" src="https://iili.io/MNxW4R.png" alt="Cubiertas Verdes">
     </div>
