--- a/nosotros.html
+++ b/nosotros.html
@@ -24,11 +24,11 @@
                 <li><a href="proyectos.html">PROYECTOS</a></li>
                 <li><a href="servicios.html">SERVICIOS</a></li>
             </ul>       
-            <div class="botones">   
+           <div class="botones">   
                 <a href="https://instagram.com/origenesarquitecturaok?igshid=YmMyMTA2M2Y=" target="_blank" rel="noopener noreferrer nofollow">
                     <img src="https://iili.io/GEGe8G.png" alt="icono instagram">
                 </a>
-                <a href="#" target="_blank" rel="noopener noreferrer nofollow">
+                <a href="https://www.facebook.com/OrigenesArquitectura" target="_blank" rel="noopener noreferrer nofollow">
                   <img src="https://iili.io/GEGOas.png" alt="icono facebook">
                 </a>
             </div>
@@ -62,6 +62,23 @@
         <p>Comunicate por WhatsApp</p>
         <button class="g-button">Conversemos</button>
     </div>
+    <footer>
+        <div>
+            <img src="https://iili.io/1hgAUG.png" alt="logo">
+            <p>La originalidad es volver al origen,<br> y el origen es la naturaleza</p>
+        </div>
+        <div>
+            <a href="nosotros.html">Inicio</a>
+            <a href="nosotros.html">Nosotros</a>
+            <a href="proyectos.html">Proyectos</a>
+            <a href="servicios.html">Servicios</a>
+        </div>
+        <div>
+            <p>Contáctanos</p>
+            <p>Tel. +54 9 351 626-8474</p>
+            <p>frivilli@origenesarquitectura.com.ar</p>
+        </div>
+    </footer>   
     <script>
     function alternar(menu)
     {
