--- a/proyectos.html
+++ b/proyectos.html
@@ -25,10 +25,10 @@
                 <li><a href="servicios.html">SERVICIOS</a></li>
             </ul>       
             <div class="botones">   
-                <a href="#">
+                <a href="https://instagram.com/origenesarquitecturaok?igshid=YmMyMTA2M2Y=" target="_blank" rel="noopener noreferrer nofollow">
                     <img src="https://iili.io/GEGe8G.png" alt="icono instagram">
                 </a>
-                <a href="#">
+                <a href="https://www.facebook.com/OrigenesArquitectura" target="_blank" rel="noopener noreferrer nofollow">
                   <img src="https://iili.io/GEGOas.png" alt="icono facebook">
                 </a>
             </div>
@@ -111,6 +111,23 @@
             <button class="g-button">Conversemos</button>
         </div>
     </main>
+    <footer>
+        <div>
+            <img src="https://iili.io/1hgAUG.png" alt="logo">
+            <p>La originalidad es volver al origen,<br> y el origen es la naturaleza</p>
+        </div>
+        <div>
+            <a href="nosotros.html">Inicio</a>
+            <a href="nosotros.html">Nosotros</a>
+            <a href="proyectos.html">Proyectos</a>
+            <a href="servicios.html">Servicios</a>
+        </div>
+        <div>
+            <p>Contáctanos</p>
+            <p>Tel. +54 9 351 626-8474</p>
+            <p>frivilli@origenesarquitectura.com.ar</p>
+        </div>
+    </footer>   
     <script>
         function alternar(menu)
         {
