--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="https://instagram.com/origenesarquitecturaok?igshid=YmMyMTA2M2Y=" target="_blank" rel="noopener noreferrer nofollow">
                     <img src="https://iili.io/GEGe8G.png" alt="icono instagram">
                 </a>
-                <a href="#" target="_blank" rel="noopener noreferrer nofollow">
+                <a href="https://www.facebook.com/OrigenesArquitectura" target="_blank" rel="noopener noreferrer nofollow">
                   <img src="https://iili.io/GEGOas.png" alt="icono facebook">
                 </a>
             </div>
@@ -72,9 +72,26 @@
                     </div>
                 </div>
             </div>
-            <button href="proyectos.html" class="g-button">VER MAS PROYECTOS</button>
+            <a href="proyectos.html" class="g-button">VER MAS PROYECTOS</a>
         </section>
-    </main>    
+    </main>
+    <footer>
+        <div>
+            <img src="https://iili.io/1hgAUG.png" alt="logo">
+            <p>La originalidad es volver al origen,<br> y el origen es la naturaleza</p>
+        </div>
+        <div>
+            <a href="nosotros.html">Inicio</a>
+            <a href="nosotros.html">Nosotros</a>
+            <a href="proyectos.html">Proyectos</a>
+            <a href="servicios.html">Servicios</a>
+        </div>
+        <div>
+            <p>Contáctanos</p>
+            <p>Tel. +54 9 351 626-8474</p>
+            <p>frivilli@origenesarquitectura.com.ar</p>
+        </div>
+    </footer>        
     <script>
     function alternar(menu)
     {
