--- a/patiozen.html
+++ b/patiozen.html
@@ -54,7 +54,7 @@
             <div class="container container-right">
                 <div class="info descripcion">
                     <h4 class="g-tituloInfo">Descripción</h4 class="g-tituloInfo">
-                    <p>En este parque se trabajaron dos áreas bien marcadas pero que fluyen conjuntamente. La zona de piscina con solarium húmedo y espacio de reunión con hoguera, en conjunto con el patio zen. Todo mantiene la misma estética, donde predomina la relajación, plenitud y desconección.</p>
+                    <p>En este parque se trabajaron dos áreas bien marcadas pero que fluyen conjuntamente. La zona de piscina con solarium húmedo y espacio de reunión con hoguera, en conjunto con el patio zen. Todo mantiene la misma estética, donde predomina la relajación, plenitud y desconexión.</p>
                 </div>
             </div>
         </div>
