--- a/proyectos.html
+++ b/proyectos.html
@@ -76,7 +76,7 @@
             </a>
             <a href="./piscinanatural.html">
                 <div class="cards card4">
-                    <img src="https://iili.io/GIktMG.jpg" alt="...">
+                    <img src="https://iili.io/MU3oKv.jpg" alt="...">
                     <div>
                         <h5 class="g-tituloCards">Piscina Natural</h5>
                         <p>Hacer de tu patio un oasis de relajación y disfrute.</p>
@@ -86,7 +86,7 @@
             </a>
             <a href="./cubiertasverdes.html">
                 <div class="cards card5">
-                    <img src="https://iili.io/GIkK2p.jpg" alt="...">
+                    <img src="https://iili.io/MU3xlR.webp" alt="...">
                     <div>
                         <h5 class="g-tituloCards">Cubiertas verdes</h5>
                         <p>Las posibilidades de aumentar las áreas verdes, más allá de los patios, parques y jardines, son múltiples.</p>
@@ -96,7 +96,7 @@
             </a>
             <a href="./galeria.html">
                 <div class="cards card6">
-                    <img src="https://iili.io/GIku44.jpg" alt="...">
+                    <img src="https://iili.io/MU3CiJ.jpg" alt="...">
                     <div>
                         <h5 class="g-tituloCards">Galería</h5>
                         <p>Dar solución para lograr la mayor integración con el medio, es nuestro objetivo.</p>
