agregue img en mejor calidad, deje comentado

--- a/cubiertasverdes.html
+++ b/cubiertasverdes.html
@@ -41,7 +41,7 @@
         </ul>  
     </nav>
     <div class="g-hero-img-container">
-        <img class="g-hero-img" src="https://iili.io/MNxW4R.png" alt="Cubiertas Verdes">
+        <img class="g-hero-img" src="https://iili.io/MNxW4R.png" alt="Cubiertas Verdes"><!--src="https://iili.io/VTcmlt.png"-->
     </div>
     <div class="g-info-container">
         <div class="g-info">
