--- a/fachada.html
+++ b/fachada.html
@@ -41,7 +41,7 @@
         </ul>  
     </nav>
     <div class="g-hero-img-container">
-        <img class="g-hero-img" src="https://iili.io/MNoqDg.png" alt="Fachada">
+        <img class="g-hero-img" src="https://iili.io/MNoqDg.png" alt="Fachada"><!--src="https://iili.io/VTToHQ.jpg"-->
     </div>
     <div class="g-info-container">
         <div class="g-info">
