--- a/galeria.html
+++ b/galeria.html
@@ -41,7 +41,7 @@
         </ul>  
     </nav>
     <div class="g-hero-img-container">
-        <img class="g-hero-img" src="https://iili.io/MNzH8B.png" alt="Galería">
+        <img class="g-hero-img" src="https://iili.io/MNzH8B.png"alt="Galería"><!--src="https://iili.io/VTTzOB.jpg" -->
     </div>
     <div class="g-info-container">
         <div class="g-info">
