--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
             <h2 class="g-tituloSeccion">Se trabaja cada proyecto como si fuese el primero</h2>
             <div class="contenedorCards">
                 <div class="cards card1">
-                    <img src="https://iili.io/GIktMG.jpg" alt="...">
+                    <img src="https://iili.io/GIktMG.jpg" alt="Espacio de reunion">
                     <div>
                         <h5 class="g-tituloCards">Espacio de reunión</h5>
                         <p>Creamos ambientes que propicien a la reunión con amigos y familia.</p>
                     </div>
                 </div>
                 <div class="cards card2">
-                    <img src="https://iili.io/GIkK2p.jpg" alt="...">
+                    <img src="https://iili.io/GIkK2p.jpg" alt="Patio pequeño con sillon">
                     <div>
                         <h5 class="g-tituloCards">Patio pequeño</h5>
                         <p>Revalorizar pequeños espacios entendiendo su potencial y explotándolo.</p>
                     </div>
                 </div>
                 <div class="cards card3">
-                    <img src="https://iili.io/GIku44.jpg" alt="...">
+                    <img src="https://iili.io/GIku44.jpg" alt="Camino con piedras blancas">
                     <div class="g-cardBody">
                         <h5 class="g-tituloCards">Jerarquización de un sector</h5>
                         <p>Trabajamos cada espacio como un todo, pero en este buscamos destacar ciertos sectores.</p>
