--- a/patiomexicano.html
+++ b/patiomexicano.html
@@ -16,7 +16,7 @@
                 </a>         
             </div>      
             <a class="toggle" onclick="alternar('menu')">
-                <img src="https://iili.io/1ymMmX.png" alt="">
+                <img src="https://iili.io/1ymMmX.png" alt=""><!--src="https://iili.io/VTTCUx.jpg"-->
             </a>
             <ul class="barNav navA"> 
                 <li><a href="index.html">INICIO</a></li>
