--- a/patiozen.html
+++ b/patiozen.html
@@ -41,7 +41,7 @@
         </ul>  
     </nav>
     <div class="g-hero-img-container">
-        <img class="g-hero-img" src="https://iili.io/Mw3tx2.png" alt="Patio Zen">
+        <img class="g-hero-img" src="https://iili.io/Mw3tx2.png" alt="Patio Zen"><!--src="https://iili.io/VTTIDP.jpg"-->
     </div>
     <div class="g-info-container">
         <div class="g-info">
@@ -60,19 +60,19 @@
         </div>
     </div>
     <div class="fotos">
-        <!-- Originales
+        <!--Originales-->
         <img src="https://iili.io/MwRzD7.png" alt="">
         <img src="https://iili.io/MwRh0J.png" alt="">
         <img src="https://iili.io/MwRQbS.png" alt="">
         <img src="https://iili.io/MwRtz7.png" alt="">
-        <img src="https://iili.io/MwRLe2.png" alt=""> -->
+        <img src="https://iili.io/MwRLe2.png" alt="">
 
-        <!-- imgupscaler -->
+        <!-- imgupscaler
         <img src="https://iili.io/VI1nmG.png" alt="">
         <img src="https://iili.io/VI142t.png" alt="">
         <img src="https://iili.io/VIEoa1.png" alt="">
         <img src="https://iili.io/VIEE9n.png" alt="">
-        <img src="https://iili.io/VIEscP.png" alt="">
+        <img src="https://iili.io/VIEscP.png" alt="">  -->
     </div>
     <div class="masProyectos">
         <h3>Más proyectos como este</h3>
