--- a/piscinanatural.html
+++ b/piscinanatural.html
@@ -41,7 +41,7 @@
         </ul>  
     </nav>
     <div class="g-hero-img-container">
-        <img class="g-hero-img" src="https://iili.io/MNoQqv.png" alt="Piscina Natural">
+        <img class="g-hero-img" src="https://iili.io/MNoQqv.png" alt="Piscina Natural"><!--src="https://iili.io/VTTxRV.jpg"-->
     </div>
     <div class="g-info-container">
         <div class="g-info">
