--- a/servicios.html
+++ b/servicios.html
@@ -44,20 +44,20 @@
         <section id="principalServicios">
             <h1 class="g-tituloPrincipal">Nuestros servicios</h1>
             <p>Nos especializamos en la Arquitectura paisajista, pero trabajamos la totalidad del hogar.</p>
-            <img src="https://iili.io/GpJzqF.png" alt="">
+            <img src="https://iili.io/VTIqyN.png" alt="">
             <h2 class="g-tituloSeccion">Arquitectura paisajista</h2>
             <p class="textBox">Nuestro propósito es acompañar a nuestros clientes en la creación de paisajes y jardines de diseño. Tanto durante el diseño como en la ejecución de la obra.</p>
             <div class="contenedorCards">
                 <div class="segundoContenedor">
                     <div class="cards card1">
-                        <img src="https://iili.io/GW5oTN.jpg" class="cardImg" alt="...">
+                        <img src="https://iili.io/GW5oTN.jpg" class="cardImg" alt="Piscina con venecitas distintos tonos">
                         <div>
                             <h3 class="g-tituloCards">Piscinas</h3>
                             <p class="cardText">Realizamos diseños personalizados de piscinas.</p>
                         </div>
                     </div>
                     <div class="cards card2">
-                        <img src="https://iili.io/GW5Cpp.jpg" class="cardImg" alt="...">
+                        <img src="https://iili.io/GW5Cpp.jpg" class="cardImg" alt="Cesped con riego automatico">
                         <div class="g-cardBody">
                             <h3 class="g-tituloCards">Riego</h3>
                             <p class="cardText">Sistemas automatizados que proporcionan un mantenimiento perfecto y sencillo.</p>
@@ -66,14 +66,14 @@
                 </div>
                 <div class="segundoContenedor">
                     <div class="cards card3">
-                        <img src="https://iili.io/GW5lu2.jpg" class="cardImg" alt="...">
+                        <img src="https://iili.io/GW5lu2.jpg" class="cardImg" alt="Quincho con detalles en madera">
                         <div>
                             <h3 class="g-tituloCards">Quincho</h3>
                             <p class="cardText">Nexos que incorporen el interior con el exterior.</p>
                         </div>
                     </div>
                     <div class="cards card4">
-                        <img src="https://iili.io/GW5A4s.jpg" class="cardImg" alt="...">
+                        <img src="https://iili.io/GW5A4s.jpg" class="cardImg" alt="Espacio verde con quincho de fondo">
                         <div class="g-cardBody">
                             <h3 class="g-tituloCards">Parquización </h3>
                             <p class="cardText">Diseños sensibles y naturales con equilibrio y buen gusto.</p>
@@ -105,10 +105,10 @@
                 <p>Podemos diseñar un nuevo espacio conjugando la totalidad de su extensión con complementos, elementos arquitectónicos y detalles que hagan a la diferencia. Creando nuevas experiencias, e incorporando nuevos elementos.</p>
             </div>
         </section>
-        <section id="contacto">
+        <section class="g-contacto">
             <h2 class="g-tituloSeccion">Coordinemos una cita</h2>
             <p>Comunícate por WhatsApp</p>
-            <button class="g-button">CONVERSEMOS</button>
+            <a href="n9.cl/padlv" class="g-button">CONVERSEMOS</a>
         </section>
     </main>
     <footer>
