puse bien los font size de los bodies, arregle imagenes de cards proyectos, agregue los alt de todas las imagenes, agregue link a wsp sin tocar secciones proyectos extendidos

--- a/nosotros.html
+++ b/nosotros.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body id="p-nosotros">
-<!--     <nav>
+     <nav>
         <div class="cajaNav"> 
             <div class="titNav">
                 <a class="logo" href="index.html">
@@ -39,8 +39,26 @@
             <li><a href="proyectos.html">PROYECTOS</a></li>
             <li><a href="servicios.html">SERVICIOS</a></li>
         </ul>  
-    </nav> -->
-    <main>
+    </nav>
+    <main id="nosotros">
+        <section id="landing">
+            <h1 class="g-tituloPrincipal">Arquitectura inspirada en lo natural</h1>
+            <img src="https://iili.io/V3TbiF.png" alt="fotos exteriores">
+        </section>
+        <section id="sobreNosotros">
+            <h2 class="g-tituloSeccion">Sobre nosotros</h2>
+            <div class="container">
+                <img src="media/12.gif" alt="gif de logo">
+                <p>Somos una empresa que se dedica a la arquitectura paisajista. Diseñando, creando vida, otorgando emociones y vivencias en zonas degradadas o sin valor. Obteniendo pulmones verdes sin salir del hogar; dando una respuesta de diseño coherente con los tiempos, y comprometida con los recursos. Que nos darán como resultado refugios urbanos naturales, necesarios para descontracturar el ritmo veloz de la vida cotidiana.</p>
+            </div>
+        </section>
+        <div class="g-coordinemos-container">
+            <h2 class="g-tituloSeccion">Coordinemos una cita</h2>
+            <p>Comunicate por WhatsApp</p>
+            <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow" class="g-button">Conversemos</a>
+        </div>
+    </main>
+    <!--<main>
         <section id="landing">
             <h1 class="g-tituloPrincipal">Arquitectura inspirada en lo natural</h1>
             <img src="https://iili.io/V3TbiF.png" alt="fotos exteriores">
@@ -61,7 +79,7 @@
         <h2 class="g-tituloSeccion">Coordinemos una cita</h2>
         <p>Comunicate por WhatsApp</p>
         <button class="g-button">Conversemos</button>
-    </div>
+    </div>-->
     <footer>
         <div>
             <img src="https://iili.io/1hgAUG.png" alt="logo">
