--- a/proyectos.html
+++ b/proyectos.html
@@ -44,9 +44,9 @@
         <h1 class="g-tituloPrincipal">Nuestro trabajo</h1>
         <p>Apuntamos a una arquitectura paisajista donde conjuguen elementos arquitectónicos de diseño, formando un nexo entre el interior y el exterior.</p>
         <div class="contenedorCards">
-            <a href="./patiozen.html">
+            <a href="./patiozen.html" target="_blank" rel="noopener noreferrer nofollow">
                 <div class="cards card1">
-                    <img src="https://iili.io/GIktMG.jpg" alt="...">
+                    <img src="https://iili.io/MUddqx.jpg" alt="imagen con piscina de fondo">
                     <div>
                         <h5 class="g-tituloCards">Patio Zen</h5>
                         <p>Lograr un ambiente fluido y dinámico donde intervienen diferentes actores, generando espacios vividos.</p>
@@ -54,9 +54,9 @@
                     </div>
                 </div>
             </a>
-            <a href="./patiomexicano.html">
+            <a href="./patiomexicano.html" target="_blank" rel="noopener noreferrer nofollow">
                 <div class="cards card2">
-                    <img src="https://iili.io/GIkK2p.jpg" alt="...">
+                    <img src="https://iili.io/MUdjp9.jpg" alt="patio con cactus estilo mexicano">
                     <div>
                         <h5 class="g-tituloCards">Patio Mexicano</h5>
                         <p>Colocación de elementos arquitectónicos que hacen un espacio en conjugación con la vegetación.</p>
@@ -64,9 +64,9 @@
                     </div>
                 </div>
             </a>
-            <a href="./fachada.html">
+            <a href="./fachada.html" target="_blank" rel="noopener noreferrer nofollow">
                 <div class="cards card3">
-                    <img src="https://iili.io/GIku44.jpg" alt="...">
+                    <img src="https://iili.io/MUd20Q.jpg" alt="fachada de vivienda">
                     <div class="g-cardBody">
                         <h5 class="g-tituloCards">Fachada</h5>
                         <p>La sencillez, naturalidad y armonía dan como resultado un diseño de buen gusto.</p>
@@ -74,9 +74,9 @@
                     </div>
                 </div>
             </a>
-            <a href="./piscinanatural.html">
+            <a href="./piscinanatural.html" target="_blank" rel="noopener noreferrer nofollow">
                 <div class="cards card4">
-                    <img src="https://iili.io/MU3oKv.jpg" alt="...">
+                    <img src="https://iili.io/MU3oKv.jpg" alt="piscina con rocas estilo natural">
                     <div>
                         <h5 class="g-tituloCards">Piscina Natural</h5>
                         <p>Hacer de tu patio un oasis de relajación y disfrute.</p>
@@ -84,9 +84,9 @@
                     </div>
                 </div>
             </a>
-            <a href="./cubiertasverdes.html">
+            <a href="./cubiertasverdes.html" target="_blank" rel="noopener noreferrer nofollow">
                 <div class="cards card5">
-                    <img src="https://iili.io/MU3xlR.webp" alt="...">
+                    <img src="https://iili.io/MU3xlR.webp" alt="Parquización">
                     <div>
                         <h5 class="g-tituloCards">Cubiertas verdes</h5>
                         <p>Las posibilidades de aumentar las áreas verdes, más allá de los patios, parques y jardines, son múltiples.</p>
@@ -94,9 +94,9 @@
                     </div>
                 </div>
             </a>
-            <a href="./galeria.html">
+            <a href="./galeria.html" target="_blank" rel="noopener noreferrer nofollow">
                 <div class="cards card6">
-                    <img src="https://iili.io/MU3CiJ.jpg" alt="...">
+                    <img src="https://iili.io/MU3CiJ.jpg" alt="galeria de vivienda">
                     <div>
                         <h5 class="g-tituloCards">Galería</h5>
                         <p>Dar solución para lograr la mayor integración con el medio, es nuestro objetivo.</p>
@@ -108,7 +108,7 @@
         <div class="g-coordinemos-container">
             <h2 class="g-tituloSeccion">Coordinemos una cita</h2>
             <p>Comunicate por WhatsApp</p>
-            <button class="g-button">Conversemos</button>
+            <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow" class="g-button">Conversemos</a>
         </div>
     </main>
     <footer>
