--- a/servicios.html
+++ b/servicios.html
@@ -44,7 +44,7 @@
         <section id="principalServicios">
             <h1 class="g-tituloPrincipal">Nuestros servicios</h1>
             <p>Nos especializamos en la Arquitectura paisajista, pero trabajamos la totalidad del hogar.</p>
-            <img src="https://iili.io/VTIqyN.png" alt="">
+            <img src="https://iili.io/VTIqyN.png" alt="logo">
             <h2 class="g-tituloSeccion">Arquitectura paisajista</h2>
             <p class="textBox">Nuestro propósito es acompañar a nuestros clientes en la creación de paisajes y jardines de diseño. Tanto durante el diseño como en la ejecución de la obra.</p>
             <div class="contenedorCards">
@@ -108,7 +108,7 @@
         <section class="g-contacto">
             <h2 class="g-tituloSeccion">Coordinemos una cita</h2>
             <p>Comunícate por WhatsApp</p>
-            <a href="n9.cl/padlv" class="g-button">CONVERSEMOS</a>
+            <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow" class="g-button">CONVERSEMOS</a>
         </section>
     </main>
     <footer>
