--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1 class="g-tituloPrincipal">Orígenes Arquitectura</h1>
             <p>Arquitectura paisajista es el arte sensible de diseñar espacios abierto habitables</p>
             <img src="https://iili.io/GGWVXR.png" alt="fotos exteriores">
-            <button class="g-button">Conversemos</button>
+            <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow" class="g-button">Conversemos</a>
         </section>
         <section id="introProyectos">
             <h2 class="g-tituloSeccion">Se trabaja cada proyecto como si fuese el primero</h2>
