--- a/patiomexicano.html
+++ b/patiomexicano.html
@@ -101,7 +101,7 @@
     <div class="g-coordinemos-container">
         <h2 class="g-tituloSeccion">Coordinemos una cita</h2>
         <p>Comunicate por WhatsApp</p>
-        <button class="g-button">Conversemos</button>
+        <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow" class="g-button">Conversemos</a>
     </div>
     <footer>
         <div>
