--- a/servicios.html
+++ b/servicios.html
@@ -108,7 +108,7 @@
         <section class="g-contacto">
             <h2 class="g-tituloSeccion">Coordinemos una cita</h2>
             <p>Comunícate por WhatsApp</p>
-            <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow" class="g-button">CONVERSEMOS</a>
+            <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow" class="g-button">Conversemos</a>
         </section>
     </main>
     <footer>
