Titulo principal nosotros break en dos lineas

--- a/nosotros.html
+++ b/nosotros.html
@@ -42,7 +42,7 @@
     </nav>
     <main id="nosotros">
         <section id="landing">
-            <h1 class="g-tituloPrincipal">Arquitectura inspirada en lo natural</h1>
+            <h1 class="g-tituloPrincipal">Arquitectura inspirada<br>en lo natural</h1>
             <img src="https://iili.io/V3TbiF.png" alt="fotos exteriores">
         </section>
         <section id="sobreNosotros">
